--- a/web/index.html
+++ b/web/index.html
@@ -2,45 +2,22 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>List accounts - Flask </title>
+<title>Home </title>
 </head>
 <body style="padding:20px">
-{% if cursor %}
-        <table border="2px">
-        <thead>
-                <tr>
-                        <th>Categoria </th>
-                </tr>
-        </thead>
-        <tbody>
-        {% for record in cursor[1] %}
-<tr>
-                        <td>{{ record[0] }} </td>
-                </tr>
-                {% endfor %}
-                </tbody>
-        </table>
-
-<table border="2px">
-    <thead>
-            <tr>
-                    <th>EAN </th>
-                    <th>Categoria </th>
-                    <th>Descrição </th>
-            </tr>
-    </thead>
-    <tbody>
-    {% for record in cursor[0] %}
-            <tr>
-                    <td>{{ record[0] }} </td>
-                    <td>{{ record[1] }} </td>
-                    <td>{{ record[2] }} </td>
-            </tr>
-            {% endfor %}
-            </tbody>
-    </table>
-{% else %}
-        <p> Erro: ao obter dados da base de dados! </p>
-{% endif %}
+        <ul style="display: flex; align-items: center; list-style: none;">
+                <li style="padding: 0 10px;">
+                    <a href="categorias">Categorias</a>
+                </li>
+                <li style="padding: 0 10px;">
+                    <a href="supercategorias">Super-Categorias</a>
+                </li>
+                <li style="padding: 0 10px;">
+                    <a href="retalhistas">Retalhistas</a>
+                </li>
+                <li style="padding: 0 10px;">
+                    <a href="evenentos de reposição">Evento de Reposição</a>
+                </li>
+            </ul>
 </body>
 </html>
