--- a/web/categorias.html
+++ b/web/categorias.html
@@ -21,7 +21,7 @@
                 </tr>
             {% endfor %}
             <tr>
-                <td><a href="">Adicionar Categoria</a></td>
+                <td><a href="Inserir_categoria">Adicionar Categoria</a></td>
             </tr>
         </tbody>
     </table>
