--- a/web/inserir_categoria.html
+++ b/web/inserir_categoria.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Change balance - Flask</title>
+    <title>Adicionar Categoria - Flask</title>
 </head>
 <body>
-        <h3>Alterar saldo da conta {{ params.get("account_number") }}</h3>
+        <h3>Adicionar nova Categoria</h3>
     <form action="insert" method="post">
         <p>Nova Categoria: <input type="text" name="categoria"/></p>
         <p><input type="submit" value="Submit"/></p>
