--- a/web/eliminar_categoria.html
+++ b/web/eliminar_categoria.html
@@ -5,7 +5,7 @@
     <title>Change balance - Flask</title>
 </head>
 <body>
-    <h3>Eleminar Categoria {{ params.get("categoria") }}</h3>
+    <h3>Eliminar Categoria {{ params.get("categoria") }}</h3>
     <form action="delete" method="post">
         <p><input type="hidden" name="categoria" value="{{params.get('categoria') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
