mudanças pequenas a proj.sql

--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
                     <a href="retalhistas">Retalhistas</a>
                 </li>
                 <li style="padding: 0 10px;">
-                    <a href="evenentos de reposição">Evento de Reposição</a>
+                    <a href="eventos de reposição">Evento de Reposição</a>
                 </li>
             </ul>
 </body>
