minor changes in app.cgi

--- a/web/eliminar_retalhista.html
+++ b/web/eliminar_retalhista.html
@@ -7,7 +7,7 @@
 <body>
     <h3>Eliminar Categoria {{ params.get("retalhista") }}</h3>
     <form action="delete" method="post">
-        <p><input type="hidden" name="categoria" value="{{params.get('retalhista') }}"/></p>
+        <p><input type="hidden" name="ratalhista" value="{{params.get('retalhista') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
     </form>
 </body>
