--- a/web/eliminar_retalhista.html
+++ b/web/eliminar_retalhista.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h3>Eliminar Categoria {{ params.get("retalhista") }}</h3>
-    <form action="delete" method="post">
+    <form action="delete_retalhista" method="post">
         <p><input type="hidden" name="ratalhista" value="{{params.get('retalhista') }}"/></p>
         <p><input type="submit" value="Confirmar"/></p>
     </form>
